# SibsutisParallelProgramOptimization

./: .gitignore  CMakeLists.txt  README.md  build.sh  test_demo.sh  test_simple.sh
include/: common.h  concepts.h  dna_parser.h  iupac_codes.h  motif_finder.h  mpi_manager.h  parallel_processor.h
src/: dna_parser.cpp  iupac_codes.cpp  main.cpp  motif_finder.cpp  mpi_manager.cpp  parallel_processor.cpp
tests/: CMakeLists.txt  test_dna_parser.cpp  test_iupac_codes.cpp  test_main.cpp  test_motif_finder.cpp  test_mpi_manager.cpp  test_mpi_simple.cpp  test_parallel_processor.cpp
